--- a/public/contact-form.html
+++ b/public/contact-form.html
@@ -1,12 +1,12 @@
 <div class="row" ng-hide="contact._id">
   <div class="col-md-6">
-      <h2>Create new contact</h2>
+      <h2>Create A New Group</h2>
   </div>
 </div>
 <div class="container">
   <div>
     <p>
-      <label>First Name (required)</label> 
+      <label>Group Name</label> 
       <input id="name" class="form-control" type="text" ng-model="contact.firstName" required> 
     </p>
     <p>
