--- a/public/contact-form.html
+++ b/public/contact-form.html
@@ -10,27 +10,27 @@
       <input id="name" class="form-control" type="text" ng-model="contact.firstName" required> 
     </p>
     <p>
-      <label>Last Name (required)</label> 
+      <label>Member 1 Name</label> 
       <input id="name" class="form-control" type="text" ng-model="contact.lastName" required> 
     </p>
     <p>
-      <label>Email (required)</label> 
+      <label>Member 2 Name</label> 
       <input id="name" class="form-control" type="text" ng-model="contact.email" required> 
     </p>
     <p>
-      <label>Phone (Mobile)</label> 
+      <label>Member 3 Name</label> 
       <input id="name" class="form-control" type="text" ng-model="contact.phone.mobile"> 
     </p>
     <p>
-      <label>Phone (Work)</label> 
+      <label>Member 4 Name</label> 
       <input id="name" class="form-control" type="text" ng-model="contact.phone.work"> 
     </p>
     <p>
-      <label>Address</label> 
+      <label>Topic of Research</label> 
       <input id="name" class="form-control" type="text" ng-model="contact.address"> 
     </p>
     <p>
-      <label>Twitter Handle</label> 
+      <label>Project Title</label> 
       <input id="name" class="form-control" type="text" ng-model="contact.twitter"> 
     </p>
     <p>
