--- a/public/contact.html
+++ b/public/contact.html
@@ -1,7 +1,7 @@
 <div class = "row">
   <div class="col-md-6">
     <h2>
-      {{ contact.firstName }} {{ contact.lastName }}
+      {{ contact.GroupName}}
     </h2>
   </div>
   <div class="col-md-3">
@@ -14,11 +14,12 @@
 </div>
 <div ng-hide="editMode" class="container">
   <div>
-    <p ng-if="contact.email">email: <a ng-href="mailto:{{ contact.email }}" target="_blank">{{ contact.email }}</a></p>
-    <p ng-if="contact.phone.mobile">phone (m): {{ contact.phone.mobile }} </p>
-    <p ng-if="contact.phone.work">phone (w): {{ contact.phone.work }} </p>
-    <p ng-if="contact.address"> address: {{ contact.address }} </p>
-    <p ng-if="contact.twitter"> twitter: <a ng-href="https://twitter.com/{{ contact.twitter }}" target="_blank">@{{ contact.twitter }}</a></p>
+    <p ng-if="contact.member1">Member: {{ contact.member1 }}</p>
+    <p ng-if="contact.member2"> Member: {{ contact.member2 }} </p>
+    <p ng-if="contact.member3"> Member: {{ contact.member3 }} </p>
+    <p ng-if="contact.member4"> Member: {{ contact.member4 }} </p>
+    <p ng-if="contact.topic"> Member: {{ contact.topic }} </p>
+	<p ng-if="contact.title"> Member: {{ contact.title }} </p>
     <p>
       <button style="margin-top:20px" class="btn btn-default" ng-click="toggleEdit()">Edit</button>
       <a style="margin-top:20px" class="btn btn-default" href="#/">Back</a>
@@ -28,3 +29,7 @@
 <!-- Contact form -->
 <div ng-include="contactFormUrl">
 </div>
+
+
+
+
