--- a/public/list.html
+++ b/public/list.html
@@ -1,7 +1,7 @@
 <div class = "row">
   <div class="col-md-6">
     <h2>
-      Contacts
+      Groups
     </h2>
   </div>
   <div class="col-md-3">
@@ -17,7 +17,7 @@
     <tbody>
       <tr ng-repeat="contact in contacts | orderBy:'lastName'" style="cursor:pointer">
         <td>
-          <a ng-href="#/contact/{{contact._id}}">{{ contact.firstName }} {{ contact.lastName }}</a>
+          <a ng-href="#/contact/{{contact._id}}">{{ contact.GroupName }}</a>
         </td>
       </tr>
     </tbody>
