--- a/public/contact.html
+++ b/public/contact.html
@@ -18,8 +18,8 @@
     <p ng-if="contact.member2"> Member: {{ contact.member2 }} </p>
     <p ng-if="contact.member3"> Member: {{ contact.member3 }} </p>
     <p ng-if="contact.member4"> Member: {{ contact.member4 }} </p>
-    <p ng-if="contact.topic"> Member: {{ contact.topic }} </p>
-	<p ng-if="contact.title"> Member: {{ contact.title }} </p>
+    <p ng-if="contact.topic"> Topic: {{ contact.topic }} </p>
+	<p ng-if="contact.title"> Title: {{ contact.title }} </p>
     <p>
       <button style="margin-top:20px" class="btn btn-default" ng-click="toggleEdit()">Edit</button>
       <a style="margin-top:20px" class="btn btn-default" href="#/">Back</a>
