--- a/public/contact-form.html
+++ b/public/contact-form.html
@@ -34,8 +34,8 @@
       <input id="name" class="form-control" type="text" ng-model="contact.title"> 
     </p>
     <p>
-      <button style="margin-top:20px" class="btn btn-default" ng-click="saveContact(contact)">Save</button>
-      <button style="margin-top:20px" class="btn btn-default" ng-click="back()">Back</button>
+      <button style="margin-top:20px" class="btn btn-default" ng-click="saveContact(contact)">Create Group</button>
+      <button style="margin-top:20px" class="btn btn-default" ng-click="back()">Cancel</button>
     </p>
   </div>
 </div>
