--- a/public/contact.html
+++ b/public/contact.html
@@ -2,6 +2,7 @@
   <div class="col-md-6">
     <h2>
       {{ contact.GroupName }}
+	  {{ contact.title }}
     </h2>
   </div>
   <div class="col-md-3">
