--- a/public/list.html
+++ b/public/list.html
@@ -15,7 +15,7 @@
 <div class="container">
   <table class="table table-hover">
     <tbody>
-      <tr ng-repeat="contact in contacts | orderBy:'lastName'" style="cursor:pointer">
+      <tr ng-repeat="contact in contacts | orderBy:'GroupName'" style="cursor:pointer">
         <td>
           <a ng-href="#/contact/{{contact._id}}">{{ contact.GroupName }}</a>
         </td>
