--- a/public/contact.html
+++ b/public/contact.html
@@ -2,7 +2,7 @@
   <div class="col-md-6">
     <h2>
       {{ contact.GroupName }}
-	  {{ contact.title }}
+	  <br>{{ contact.title }}</br>
     </h2>
   </div>
   <div class="col-md-3">
