--- a/public/contact.html
+++ b/public/contact.html
@@ -1,8 +1,8 @@
 <div class = "row">
   <div class="col-md-6">
     <h2>
-      {{ contact.GroupName }}
-	  <br>{{ contact.title }}</br>
+      Group Name: <ul>{{ contact.GroupName }}</ul>
+	  <br> Title of Research: {{ contact.title }}</br>
     </h2>
   </div>
   <div class="col-md-3">
