--- a/public/contact.html
+++ b/public/contact.html
@@ -1,7 +1,7 @@
 <div class = "row">
   <div class="col-md-6">
     <h2>
-      Group Name: <ul>{{ contact.GroupName }}</ul>
+      <ul>Group Name: {{ contact.GroupName }}</ul>
 	  <br> Title of Research: {{ contact.title }}</br>
     </h2>
   </div>
