changing name formats

--- a/public/contact.html
+++ b/public/contact.html
@@ -2,7 +2,7 @@
   <div class="col-md-6">
     <h2>
       <ul>Group Name: {{ contact.GroupName }}</ul>
-	  <br> Title of Research: {{ contact.title }}</br>
+	  <ul>Title of Research: {{ contact.title }}</ul>
     </h2>
   </div>
   <div class="col-md-3">
