--- a/public/list.html
+++ b/public/list.html
@@ -8,6 +8,7 @@
   </div>
   <div class="col-md-2">
     <a style="margin-top:20px" class="btn btn-default" href="#/new/contact">New Group</a>
+	<a style="margin-top:20px" class="btn btn-default" href="#/new/contact">New Group</a>
   </div>
   <div class="col-md-1">
   </div>
