--- a/public/list.html
+++ b/public/list.html
@@ -5,6 +5,7 @@
     </h2>
   </div>
   <div class="col-md-3">
+    HELLO
   </div>
   <div class="col-md-2">
     <a style="margin-top:20px" class="btn btn-default" href="#/new/contact">New Group</a>
