--- a/public/progress-form.html
+++ b/public/progress-form.html
@@ -34,7 +34,7 @@
       <input id="name" class="form-control" type="text" ng-model="contact.title"> 
     </p>
     <p>
-      <button style="margin-top:20px" class="btn btn-default" ng-click="saveContact(contact)">Save</button>
+      <button style="margin-top:20px" class="btn btn-default" ng-click="saveContact(progress)">Save</button>
       <button style="margin-top:20px" class="btn btn-default" ng-click="back()">Cancel</button>
     </p>
   </div>
