--- a/public/progress-form.html
+++ b/public/progress-form.html
@@ -1,4 +1,4 @@
-<div class="row" ng-hide="contact._id">
+<div class="row" ng-hide="progress._id">
   <div class="col-md-6">
       <h2>Create a Daily Progress Report</h2>
   </div>
@@ -7,34 +7,34 @@
   <div>
     <p>
       <label>Group Name*</label> 
-      <input id="name" class="form-control" type="text" ng-model="contact.GroupName" required> 
+      <input id="name" class="form-control" type="text" ng-model="progressReport.GroupName" required> 
     </p>
     <p>
       <label>Date*</label> 
-      <input id="name" class="form-control" type="text" ng-model="contact.member1" required> 
+      <input id="name" class="form-control" type="text" ng-model="progressReport.member1" required> 
     </p>
     <p>
       <label>Key Item 1 Accomplished*</label> 
-      <input id="name" class="form-control" type="text" ng-model="contact.member2" required> 
+      <input id="name" class="form-control" type="text" ng-model="progressReport.member2" required> 
     </p>
     <p>
       <label>Key Item 2 Accomplished</label> 
-      <input id="name" class="form-control" type="text" ng-model="contact.member3"> 
+      <input id="name" class="form-control" type="text" ng-model="progressReport.member3"> 
     </p>
     <p>
       <label>Key Item 3 Accomplished</label> 
-      <input id="name" class="form-control" type="text" ng-model="contact.member4"> 
+      <input id="name" class="form-control" type="text" ng-model="progressReport.member4"> 
     </p>
     <p>
       <label>Goals for Tomorrow*</label> 
-      <input id="name" class="form-control" type="text" ng-model="contact.topic" required> 
+      <input id="name" class="form-control" type="text" ng-model="progressReport.topic" required> 
     </p>
     <p>
       <label>Current Challenge Focus</label> 
-      <input id="name" class="form-control" type="text" ng-model="contact.title"> 
+      <input id="name" class="form-control" type="text" ng-model="progressReport.title"> 
     </p>
     <p>
-      <button style="margin-top:20px" class="btn btn-default" ng-click="saveContact(progress)">Save</button>
+      <button style="margin-top:20px" class="btn btn-default" ng-click="saveProgress(progressReport)">Save</button>
       <button style="margin-top:20px" class="btn btn-default" ng-click="back()">Cancel</button>
     </p>
   </div>
