--- a/public/list.html
+++ b/public/list.html
@@ -14,7 +14,7 @@
   </div>
 </div>
 <div class="container">
-  <!-- <table class="table table-hover"> 
+   <table class="table table-hover"> 
     <tbody>
       <tr ng-repeat="contact in contacts | orderBy:'GroupName'" style="cursor:pointer">
         <td>
@@ -22,7 +22,7 @@
         </td>
       </tr>
     </tbody>
-  </table> -->
+  </table> 
   
    <table class="table table-hover">
     <tbody>
