changing name formats

--- a/public/list.html
+++ b/public/list.html
@@ -23,7 +23,7 @@
       </tr>
     </tbody>
   </table> 
-  
+  <h3> Progress Reports </h3>
    <table class="table table-hover">
     <tbody>
       <tr ng-repeat="progressReport in progressReports" style="cursor:pointer">
