index.html edit

--- a/public/list.html
+++ b/public/list.html
@@ -28,7 +28,7 @@
     <tbody>
       <tr ng-repeat="progressReport in progressReports" style="cursor:pointer">
         <td>
-          <a ng-href="#/progress/{{progressReport._id}}">{{ progressReport.GroupName }} {{progressReport.member1}} </a>
+          <a ng-href="#/progress/{{progressReport._id}}">{{ progressReport.GroupName }} Date Created: {{progressReport.member1}} </a>
         </td>
       </tr>
     </tbody>
