--- a/public/progress.html
+++ b/public/progress.html
@@ -8,7 +8,7 @@
   <div class="col-md-3">
   </div>
   <div class="col-md-2">
-    <a href="#/"><button style="margin-top:20px" class="btn btn-default" ng-click="deleteProgress(progressReport._id)">Delete</button></a>
+    <!--<a href="#/"><button style="margin-top:20px" class="btn btn-default" ng-click="deleteProgress(progressReport._id)">Delete</button></a>-->
   </div>
   <div class="col-md-1">
   </div>
@@ -22,7 +22,7 @@
     <p ng-if="progressReport.topic"> Topic: {{ progressReport.topic }} </p>
 	<p ng-if="progressReport.title"> Title: {{ progressReport.title }} </p>
     <p>
-      <button style="margin-top:20px" class="btn btn-default" ng-click="toggleEdit()">Edit</button>
+      <!--<button style="margin-top:20px" class="btn btn-default" ng-click="toggleEdit()">Edit</button>-->
       <a style="margin-top:20px" class="btn btn-default" href="#/">Back</a>
     </p>
   </div>
