--- a/public/progress-form.html
+++ b/public/progress-form.html
@@ -11,27 +11,27 @@
     </p>
     <p>
       <label>Date*</label> 
-      <input id="name" class="form-control" type="text" ng-model="progressReport.member1" required> 
+      <input id="name" class="form-control" type="text" ng-model="progressReport.dateMade" required> 
     </p>
     <p>
       <label>Key Item 1 Accomplished*</label> 
-      <input id="name" class="form-control" type="text" ng-model="progressReport.member2" required> 
+      <input id="name" class="form-control" type="text" ng-model="progressReport.key1" required> 
     </p>
     <p>
       <label>Key Item 2 Accomplished</label> 
-      <input id="name" class="form-control" type="text" ng-model="progressReport.member3"> 
+      <input id="name" class="form-control" type="text" ng-model="progressReport.key2"> 
     </p>
     <p>
       <label>Key Item 3 Accomplished</label> 
-      <input id="name" class="form-control" type="text" ng-model="progressReport.member4"> 
+      <input id="name" class="form-control" type="text" ng-model="progressReport.key3"> 
     </p>
     <p>
       <label>Goals for Tomorrow*</label> 
-      <input id="name" class="form-control" type="text" ng-model="progressReport.topic" required> 
+      <input id="name" class="form-control" type="text" ng-model="progressReport.tomorrow" required> 
     </p>
     <p>
       <label>Current Challenge Focus</label> 
-      <input id="name" class="form-control" type="text" ng-model="progressReport.title"> 
+      <input id="name" class="form-control" type="text" ng-model="progressReport.challenge"> 
     </p>
     <p>
       <button style="margin-top:20px" class="btn btn-default" ng-click="saveProgress(progressReport)">Save</button>
