--- a/public/progress.html
+++ b/public/progress.html
@@ -2,7 +2,7 @@
   <div class="col-md-6">
     <h3>
       <ul>Group Name: {{ progressReport.GroupName }}</ul>
-	  <ul>Title of Research: {{ progressReport.title }}</ul>
+	  <ul>Title of Research: {{ progressReport.challenge }}</ul>
     </h3>
   </div>
   <div class="col-md-3">
@@ -15,12 +15,12 @@
 </div>
 <div ng-hide="editMode" class="container">
   <div>
-    <p ng-if="progressReport.member1"> Date Report Created: {{ progressReport.member1 }}</p>
-    <p ng-if="progressReport.member2"> Key Item 1 Accomplished: {{ progressReport.member2 }} </p>
-    <p ng-if="progressReport.member3"> Key Item 2 Accomplished: {{ progressReport.member3 }} </p>
-    <p ng-if="progressReport.member4"> Key Item 3 Accomplished: {{ progressReport.member4 }} </p>
-    <p ng-if="progressReport.topic"> Goals for Tomorrow: {{ progressReport.topic }} </p>
-	<p ng-if="progressReport.title"> Current Challenge Focus: {{ progressReport.title }} </p>
+    <p ng-if="progressReport.member1"> Date Report Created: {{ progressReport.dateMade }}</p>
+    <p ng-if="progressReport.member2"> Key Item 1 Accomplished: {{ progressReport.key1 }} </p>
+    <p ng-if="progressReport.member3"> Key Item 2 Accomplished: {{ progressReport.key2 }} </p>
+    <p ng-if="progressReport.member4"> Key Item 3 Accomplished: {{ progressReport.key3 }} </p>
+    <p ng-if="progressReport.topic"> Goals for Tomorrow: {{ progressReport.tomorrow }} </p>
+	<p ng-if="progressReport.title"> Current Challenge Focus: {{ progressReport.challenge }} </p>
     <p>
       <!--<button style="margin-top:20px" class="btn btn-default" ng-click="toggleEdit()">Edit</button>-->
       <a style="margin-top:20px" class="btn btn-default" href="#/">Back</a>
