--- a/public/list.html
+++ b/public/list.html
@@ -1,5 +1,6 @@
 <div class = "row">
   <div class="col-md-6">
+    <img src="odu_logo.gif" alt="Lion Logo" style="width:304px;height:228px;">
     <h2>
       Groups
     </h2>
