--- a/public/progress-form.html
+++ b/public/progress-form.html
@@ -11,7 +11,7 @@
     </p>
     <p>
       <label>Date*</label> 
-      <input id="name" class="form-control" type="text" ng-model="progressReport.dateMade" required> 
+      <input id="name" class="form-control" type="date" ng-model="progressReport.dateMade" required> 
     </p>
     <p>
       <label>Key Item 1 Accomplished*</label> 
