--- a/public/progress-form.html
+++ b/public/progress-form.html
@@ -7,11 +7,11 @@
   <div>
     <p>
       <label>Group Name*</label> 
-      <input id="name" class="form-control" type="text" ng-model="progressReport.GroupName" required> 
+      <input id="name" class="form-control" type="text"datetime="yyyy-MM-dd HH:mm:ss" ng-model="progressReport.GroupName" required> 
     </p>
     <p>
       <label>Date*</label> 
-      <input id="name" class="form-control" type="date" ng-model="progressReport.dateMade" required> 
+      <input id="name" class="form-control" type="text" ng-model="progressReport.dateMade" required> 
     </p>
     <p>
       <label>Key Item 1 Accomplished*</label> 
