--- a/public/list.html
+++ b/public/list.html
@@ -35,5 +35,10 @@
     </tbody>
   </table>
   
+  <footer>
+    <p>Posted by: Jesse Wright of Ajay Gupta's Lab</p>
+    <p>Contact information: <a href="mailto:jwri@cs.odu.edu">
+    jwri@cs.odu.edu</a>.</p>
+  </footer>
   
 </div>
