--- a/public/progress-form.html
+++ b/public/progress-form.html
@@ -7,7 +7,7 @@
   <div>
     <p>
       <label>Group Name*</label> 
-      <input id="name" class="form-control" type="text"datetime="yyyy-MM-dd" ng-model="progressReport.GroupName" required> 
+      <input id="name" class="form-control" type="text"datetime="yyyy-MM-dd HH:mm:ss" ng-model="progressReport.GroupName" required> 
     </p>
     <p>
       <label>Date*</label> 
