--- a/public/list.html
+++ b/public/list.html
@@ -35,11 +35,64 @@
     </tbody>
   </table>
   <br>
-  <br>
-  <footer>
-    <p>Posted by: Jesse Wright of Ajay Gupta's Lab</p>
-    <p>Contact information: <a href="mailto:jwri@cs.odu.edu">
-    jwri@cs.odu.edu</a>.</p>
-  </footer>
-  
+  <br> 
 </div>
+
+#footer {
+  width: 984px;
+  position: absolute;
+  bottom: 0px;
+  height: 71px;
+  border-top: 8px solid #254A73;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  color: #343434
+}
+
+#footer ul {
+  margin: 15px 0 10px 0;
+  text-align: center
+}
+
+#footer li {
+  display: inline;
+  list-style-type: none;
+}
+
+#footer li a {
+  color: #343434;
+  text-decoration: none;
+  margin: 0 5px
+}
+
+#footer li a:visited {
+  text-decoration: none
+}
+
+#footer li a:hover {
+  text-decoration: underline
+}
+
+
+#footer p {
+  text-align: center
+}
+
+
+</style>
+</head>
+<body>
+  <div id="footer">
+    <ul>
+      <li><a href="index.html">Home Page</a> |</li>
+      <li><a href="index2.html">About Company</a> |</li>
+      <li><a href="index2.html">Hot Tours</a> |</li>
+      <li><a href="index2.html">Hotels</a> |</li>
+      <li><a href="index2.html">Services</a> |</li>
+      <li><a href="index2.html">Reviews</a> |</li>
+      <li><a href="index2.html">Partners</a> |</li>
+      <li><a href="index2.html">Contact us</a></li>
+    </ul>
+  </div>
+
+</body>
