list.html update

--- a/public/list.html
+++ b/public/list.html
@@ -77,7 +77,12 @@
 #footer p {
   text-align: center
 }
-
+<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"
+  xml:lang="en">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title></title>
+<style rel="stylesheet" type="text/css">
 
 </style>
 </head>
