--- a/public/list.html
+++ b/public/list.html
@@ -77,27 +77,11 @@
 #footer p {
   text-align: center
 }
-<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"
-  xml:lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title></title>
-<style rel="stylesheet" type="text/css">
-
+<style>
+p {
+    border-style: solid;
+    border-top: thick double #ff0000;
+}
 </style>
 </head>
-<body>
-  <div id="footer">
-    <ul>
-      <li><a href="index.html">Home Page</a> |</li>
-      <li><a href="index2.html">About Company</a> |</li>
-      <li><a href="index2.html">Hot Tours</a> |</li>
-      <li><a href="index2.html">Hotels</a> |</li>
-      <li><a href="index2.html">Services</a> |</li>
-      <li><a href="index2.html">Reviews</a> |</li>
-      <li><a href="index2.html">Partners</a> |</li>
-      <li><a href="index2.html">Contact us</a></li>
-    </ul>
-  </div>
-
-</body>
