--- a/public/list.html
+++ b/public/list.html
@@ -37,9 +37,9 @@
   <br>
   <br> 
   <style>
-    p {
+    p  {
       border-style: solid;
-      border-top: thick double #ff0000;
+      border-bottom: thick dotted #ff0000;
     }
 </style>
 </div>
