--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,9 @@
     <div class="container" ng-view>
     </div>
 	<div ng-controller="ChallengeThemes as challenges">
-	  <h3> {{challenges.challenge.name}} </h3>
-	  <h3> ${{challenges.challenge.bounty}} </h3>
-	  <p> {{challenges.challenge.description}} </p>
+	  <h3> {{challenges.contest.name}} </h3>
+	  <h3> ${{challenges.contest.bounty}} </h3>
+	  <p> {{challenges.contest.description}} </p>
 	</div>
   </body>
 </html>
