--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,9 @@
     <!-- Dynamically render templates -->
     <div class="container" ng-view>
     </div>
-	<div ng-controller="ChallengeThemes as challenges">
-	  <div ng-repeat="contest in challenges">
+	<div ng-controller="ChallengeThemes as challenges  ng-repeat="contest in challenges"">
 	    <h3> Challenge Title: {{contest.name}} </h3>
 	    <p> {{contest.description}} </p>
-	  </div>
 	</div>
   </body>
 </html>
