--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,10 @@
     <div class="container" ng-view>
     </div>
 	
-    <div ng-controller="ChallengeThemes as challenge">  
-      <h1> {{challenge.contest[0].name}} </h1>
-	  <p>  {{challenge.contest[0].description}} </p>
+    <div ng-controller="ChallengeThemes as challenge">
+      <h2 ng-repeat="contest in challenge">
+        <h3> {{contest.name}} </h3>
+	    <p>  {{contest.description}} </p>
     </div>
   </body>
 </html>
