--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <script src="/js/app.js"></script>
   </head>
 
-  <body>
+  <body ng-controller="ChallengeThemes as challenge">
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -42,8 +42,8 @@
     <div class="container" ng-view>
     </div>
 	
-    <div ng-controller="ChallengeThemes as challenge">
-      <h2 ng-repeat="contest in challenge">
+    <div ng-repeat="contest in challenge">
+     
         <h3> {{contest.name}} </h3>
 	    <p>  {{contest.description}} </p>
     </div>
