added a controller with a loop

--- a/public/index.html
+++ b/public/index.html
@@ -42,10 +42,10 @@
     <div class="container" ng-view>
     </div>
 	
-    <div ng-repeat="contest in challenge">
+    <div ng-repeat="cont in challeng.contest">
      
-        <h3> {{contest.name}} </h3>
-	    <p>  {{contest.description}} </p>
+        <h3> {{cont.name}} </h3>
+	    <p>  {{cont.description}} </p>
     </div>
   </body>
 </html>
