added a controller with a loop

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     <div class="container" ng-view>
     </div>
 	
-    <div ng-repeat="cont in challeng.contest">
+    <div ng-repeat="cont in challenge.contest">
      
         <h3> {{cont.name}} </h3>
 	    <p>  {{cont.description}} </p>
