added a controller with a loop

--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,9 @@
     </div>
 	
     <div ng-repeat="cont in challenge.contest">
-     
         <h3> {{cont.name}} </h3>
 	    <p>  {{cont.description}} </p>
+		<img ng-src={{cont.image}} />
     </div>
   </body>
 </html>
