added a controller with a loop

--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,13 @@
     </div>
 	
     <div ng-repeat="cont in challenge.contest">
-        <h3> {{cont.name}} </h3>
-	    <p>  {{cont.description}} </p>
-		<img ng-src={{cont.image}} />
+	  <table style="weidth:80%>
+	    <tr>
+		  <td><img ng-src={{cont.image}} /></td>
+          <td> {{cont.name}} </td>
+	      <td> {{cont.description}} </td>
+		</tr>
+		
     </div>
   </body>
 </html>
