--- a/public/index.html
+++ b/public/index.html
@@ -45,11 +45,11 @@
     <div ng-repeat="cont in challenge.contest">
 	  <table style="weidth:80%>
 	    <tr>
-		  
+		  <td> <img ng-src={{cont.image}}  /> </td>
           <td> {{cont.name}} </td>
 	      <td> {{cont.description}} </td>
 		</tr>
-		
+	  </table>
     </div>
   </body>
 </html>
