--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
     </div>
 	
     <div ng-repeat="cont in challenge.contest">
-	  <table style="weidth:80%>
+	  <table style="width:80%>
 	    <tr>
 		 
           <td> {{cont.name}} </td>
