--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,9 @@
     </div>
 	
     <div ng-repeat="cont in challenge.contest">
-	  <table style="width:80%">
+	  <table border ="1" style="width:80%">
 	    <tr>
-		 
+		  <td> <img ng-src="{{cont.image}}"/> </td>
           <td> {{cont.name}} </td>
 	      <td> {{cont.description}} </td>
 		</tr>
