added a controller with a loop

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,14 @@
     <div class="container" ng-view>
     </div>
 	
+	<section>
+	  <ul class="nav nav-pills">
+	    <li> <a href>Object Recognition</a> </li>
+	    <li> <a href>Histogram</a> </li>
+	    <li> <a href>Wild Card</a> </li>
+	  </ul>
+	</section>
+	
     <div ng-repeat="cont in challenge.contest">
 	  <table border ="1" style="width:30%">
 	    <tr>
