--- a/public/index.html
+++ b/public/index.html
@@ -54,11 +54,11 @@
 	  <p> {{challenge.contest.description1}} </p>
 	</div>  
 	<div class="panel" ng-show="tab===2">
-	  <img ng-src="{{challenge.contest.image2}"/>
+	  <img ng-src="{{challenge.contest.image2}}"/>
 	  <p> {{challenge.contest.description2}} </p>
 	</div>
 	<div class="panel" ng-show="tab===3">
-	  <img ng-src="{{challenge.contest.image3}"/>
+	  <img ng-src="{{challenge.contest.image3}}"/>
 	  <p> {{challenge.contest.description3}} </p>
 	</div>
   </body>
