--- a/public/list.html
+++ b/public/list.html
@@ -1,9 +1,11 @@
 <div class = "row">
   <div class="col-md-6">
     <img src="odu_logo.gif" alt="Lion Logo" style="width:152px;height:114px;">
-    <h2>
-      Groups
-    </h2>
+    <h3>Introduction</h3>
+	<p>Netarus is working with ODU’s Computer Science department to share data collected from its HoistCam platform.  HoistCam collects aerial footage similar to a drone, but is mounted onto equipment such as a tower crane.</p>
+
+	
+	<h3>Groups</h3>
   </div>
   <div class="col-md-3">
     <a style="margin-top:20px" class="btn btn-default" href="#/new/contact">New Group</a>
