--- a/public/groups.html
+++ b/public/groups.html
@@ -1,13 +1,13 @@
 <div class = "row">
+  <div class="col-md-3">
+    <a style="margin-top:20px" class="btn btn-default" href="#/">Home</a>
+  </div>
   <div class="col-md-6">
     <img src="odu_logo.gif" alt="Lion Logo" style="width:152px;height:114px;">
 	<h3>Groups</h3>
   </div>
   <div class="col-md-3">
     <a style="margin-top:20px" class="btn btn-default" href="#/new/contact">New Group</a>
-  </div>
-  <div class="col-md-2">
-	<a style="margin-top:20px" class="btn btn-default" href="#/new/progress">New Progress Report</a>
   </div>
   <div class="col-md-1">
   </div>
