--- a/public/groups.html
+++ b/public/groups.html
@@ -1,3 +1,19 @@
+<nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <div class="navbar-brand" href="#/">ODU Computer Science Summer Research Initiative</div>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#/">Home</a></li>
+			<li class="active"><a href="groups.html">Groups</a></li>
+			<li class="active"><a href="progress_front_page.html">Reporting</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
 <div class = "row">
   <div class="col-md-3">
     <a style="margin-top:20px" class="btn btn-default" href="#/">Home</a>
