--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#/">Home</a></li>
-			<li><a href="groups.html">Groups</a></li>
+			<li><a href="#/groups">Groups</a></li>
 			<li><a href="progress_front_page.html">Reporting</a></li>
           </ul>
         </div>
