--- a/public/groups.html
+++ b/public/groups.html
@@ -1,14 +1,36 @@
-<h1>GROUPS</h1>
-<div class = "row">
-  <div class="col-md-6">
-    <img src="odu_logo.gif" alt="Lion Logo" style="width:152px;height:114px;">
-  </div>
-  <div class="col-md-3">
-    <a style="margin-top:20px" class="btn btn-default" href="#/new/contact">New Group</a>
-  </div>
-  <div class="col-md-1">
-  </div>
-</div>
+<style>
+      body {
+        min-height: 900px;
+        padding-top: 70px;
+      }
+    </style>
+
+    <script src="/js/app.js"></script>
+  </head>
+
+  <body ng-controller="ChallengeThemes as challenge">
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <div class="navbar-brand" href="#/">ODU Computer Science Summer Research Initiative</div>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#/">Home</a></li>
+			<li><a href="#/groups">Groups</a></li>
+			<li><a href="progress_front_page.html">Reporting</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- Dynamically render templates -->
+    <div class="container">
+		<div ng-view>
+		</div>
+		</div>
+	
+
+  </body>
 <div class="container">
    <table class="table table-hover"> 
     <tbody>
