--- a/public/groups.html
+++ b/public/groups.html
@@ -1,12 +1,12 @@
-<style>
+<head>
+  <style>
       body {
         min-height: 900px;
         padding-top: 70px;
       }
-    </style>
-
-    <script src="/js/app.js"></script>
-  </head>
+  </style>
+<script src="/js/app.js"></script>
+</head>
 
   <body ng-controller="ChallengeThemes as challenge">
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -28,9 +28,8 @@
 		<div ng-view>
 		</div>
 		</div>
-	
-
   </body>
+  
 <div class="container">
    <table class="table table-hover"> 
     <tbody>
