--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#/">Home</a></li>
+            <li><a href="#/">Home</a></li>
 			<li><a href="#/groups">Groups</a></li>
 			<li><a href="progress_front_page.html">Reporting</a></li>
           </ul>
