--- a/public/groups.html
+++ b/public/groups.html
@@ -1,5 +1,7 @@
 <h1>Groups</h1>
-  
+<div class="col-md-3">
+    <a style="margin-top:20px" class="btn btn-default" href="#/new/contact">New Group</a>
+</div>  
 <div class="container">
    <table class="table table-hover"> 
     <tbody>
