--- a/public/groups.html
+++ b/public/groups.html
@@ -1,7 +1,11 @@
-<h1>Groups</h1>
-<div class="col-md-3">
+<div class = "row">
+  <div class="col-md-6">
+    <img src="odu_logo.gif" alt="Lion Logo" style="width:152px;height:114px;">
+    <h1>Groups</h1>
+  <div class="col-md-3">
     <a style="margin-top:20px" class="btn btn-default" href="#/new/contact">New Group</a>
-</div>  
+  </div>  
+</div>
 <div class="container">
    <table class="table table-hover"> 
     <tbody>
