--- a/public/list.html
+++ b/public/list.html
@@ -2,8 +2,19 @@
   <div class="col-md-6">
     <img src="odu_logo.gif" alt="Lion Logo" style="width:152px;height:114px;">
     <h3>Introduction</h3>
-	<p>Netarus is working with ODU’s Computer Science department to share data collected from its HoistCam platform.  HoistCam collects aerial footage similar to a drone, but is mounted onto equipment such as a tower crane.</p>
-	<h3>Groups</h3>
+	<p>Netarus is working with ODU’s Computer Science department to share data collected from its HoistCam platform.  
+	   HoistCam collects aerial footage similar to a drone, but is mounted onto equipment such as a tower crane.</p>
+	<h3>Goals & Requirements</h3>
+	<p>The goal of this competition is to automate analysis and report generation of video for managers of construction sites.  
+	   Currently GB of data are generated daily and stored, but a human has to watch the videos for analysis.  The reasons 
+	   workers watch these videos (outlined below) need to be incorporated into a video analytics platform.  The Project must 
+	   demonstrate the real world and useful data within a construction environment.</p>
+	<h3>Timeline<h3>
+	<ol>
+	  <li>Kick-Off Meeting: July 11, 2016 @ 9 AM</li>
+	  <li>Work Period: July 11 through August 5</li>
+	  <li>Final Award: August 12, 2016</li>
+	</ol>
   </div>
   <div class="col-md-2">
 	<a style="margin-top:20px" class="btn btn-default" href="#/new/progress">New Progress Report</a>
