--- a/public/list.html
+++ b/public/list.html
@@ -9,7 +9,7 @@
 	   Currently GB of data are generated daily and stored, but a human has to watch the videos for analysis.  The reasons 
 	   workers watch these videos (outlined below) need to be incorporated into a video analytics platform.  The Project must 
 	   demonstrate the real world and useful data within a construction environment.</p>
-	<h3>Timeline<h3>
+	<h3>Timeline</h3>
 	<ol>
 	  <li>Kick-Off Meeting: July 11, 2016 @ 9 AM</li>
 	  <li>Work Period: July 11 through August 5</li>
