--- a/public/list.html
+++ b/public/list.html
@@ -11,9 +11,9 @@
 	   demonstrate the real world and useful data within a construction environment.</p>
 	<h3>Timeline</h3>
 	<ol>
-	  <li>Kick-Off Meeting: July 11, 2016 @ 9 AM</li>
-	  <li>Work Period: July 11 through August 5</li>
-	  <li>Final Award: August 12, 2016</li>
+	  <li><b>Kick-Off Meeting:</b> July 11, 2016 @ 9 AM</li>
+	  <li><b>Work Period:</b> July 11 through August 5</li>
+	  <li><b>Final Award:</b> August 12, 2016</li>
 	</ol>
   </div>
   <div class="col-md-2">
