--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
           <ul class="nav navbar-nav">
             <li><a href="#/">Home</a></li>
 			<li><a href="#/groups">Groups</a></li>
-			<li><a href="#/progress_front_page.html">Reporting</a></li>
+			<li><a href="#/progress_front_page">Reporting</a></li>
           </ul>
         </div>
       </div>
