--- a/public/list.html
+++ b/public/list.html
@@ -15,6 +15,17 @@
 	  <li><b>Work Period:</b> July 11 through August 5</li>
 	  <li><b>Final Award:</b> August 12, 2016</li>
 	</ol>
+	<h3>Rules & Assumptions/Dependencies</h3>
+	<ul>
+	  <li>20GB of images will be supplied on a storage area network/server to analyze 
+	      and produce useful data.</li>
+	  <li>Project must demonstrate the real world and useful data within a
+     	  construction environment.</li>
+	  <li>Can use all resources available to the general public or within the university.</li>
+	  <li>Acceptable computer systems - Open software without licensing restrictions &
+	      Use of ODU computing resources only</li>
+	</ul>
+
   </div>
 </div>
 
