--- a/public/list.html
+++ b/public/list.html
@@ -30,6 +30,8 @@
 </div>
 
 <h3> Explore the Challenge Topics! </h3>
+<p> You are free to choose any of these three challenge points, the best two will be judged
+    and awarded a prize following the procedures described in Judging.</p>
 			<section ng-init="tab = 1">
 		  <ul class="nav nav-pills">
 			<li> <a href ng-click="tab = 1">Object Recognition</a> </li>
