--- a/public/list.html
+++ b/public/list.html
@@ -1,6 +1,7 @@
 <div class = "row">
   <div class="col-md-6">
     <img src="odu_logo.gif" alt="Lion Logo" style="width:152px;height:114px;">	
+	<img src="black_and_yellow_lines_8_by_2.png" alt="HC Logo" style="width:152px;height:114px;">	
     <h3>Introduction</h3>
 	<p>Netarus is working with ODU’s Computer Science department to share data collected from its HoistCam platform.  
 	   HoistCam collects aerial footage similar to a drone, but is mounted onto equipment such as a tower crane.</p>
