--- a/public/list.html
+++ b/public/list.html
@@ -1,17 +1,17 @@
 <div>
-  <img src="odu_logo.gif" alt="Lion Logo" align="left" style="width:152px;height:114px;">	
-  <img src="black_and_yellow_lines_8_by_2.png" alt="HC Logo" align="right" style="width:300px;height:114px;">	
+  <img src="odu_logo.gif" alt="Lion Logo" align="left" style="width:152px;height:114px;">
+  <img src="netarus_medium_logo.png" alt="HC Logo" align="right" style="width:300px;height:114px;">	
 </div>
 <div class = "row">
   <div class="col-md-6">
     <br><br><br><br><br><br>
 	<h3>Introduction</h3>
-	<p>Netarus is working with ODU’s Computer Science department to share data collected from its HoistCam platform.  
+	<p>Netarus is working with ODU’s Computer Science department to share data collected from its HoistCam platform.
 	   HoistCam collects aerial footage similar to a drone, but is mounted onto equipment such as a tower crane.</p>
 	<h3>Goals & Requirements</h3>
-	<p>The goal of this competition is to automate analysis and report generation of video for managers of construction sites.  
-	   Currently GB of data are generated daily and stored, but a human has to watch the videos for analysis.  The reasons 
-	   workers watch these videos (outlined below) need to be incorporated into a video analytics platform.  The Project must 
+	<p>The goal of this competition is to automate analysis and report generation of video for managers of construction sites.
+	   Currently GB of data are generated daily and stored, but a human has to watch the videos for analysis.  The reasons
+	   workers watch these videos (outlined below) need to be incorporated into a video analytics platform.  The Project must
 	   demonstrate the real world and useful data within a construction environment.</p>
 	<h3>Timeline</h3>
 	<ol>
@@ -21,7 +21,7 @@
 	</ol>
 	<h3>Rules & Assumptions/Dependencies</h3>
 	<ul>
-	  <li>20GB of images will be supplied on a storage area network/server to analyze 
+	  <li>20GB of images will be supplied on a storage area network/server to analyze
 	      and produce useful data.</li>
 	  <li>Project must demonstrate the real world and useful data within a
      	  construction environment.</li>
@@ -46,7 +46,7 @@
 		<div class="panel" ng-show="tab===1">
 		  <img ng-src="{{challenge.contest.image1}}"/>
 		  <p> {{challenge.contest.description1}} </p>
-		</div>  
+		</div>
 		<div class="panel" ng-show="tab===2">
 		  <img ng-src="{{challenge.contest.image2}}"/>
 		  <p> {{challenge.contest.description2}} </p>
@@ -55,8 +55,3 @@
 		  <img ng-src="{{challenge.contest.image3}}"/>
 		  <p> {{challenge.contest.description3}} </p>
 		</div>
-
-
-
-
-
