--- a/public/list.html
+++ b/public/list.html
@@ -1,7 +1,10 @@
 <div>
   <img src="odu_logo.gif" alt="Lion Logo" align="left" style="width:152px;height:114px;">
-  <img src="netarus_medium_logo.png" alt="HC Logo" align="right" style="width:300px;height:114px;">	
+  <img src="netarus_medium_logo.png" alt="HC Logo" align="right" style="width:300px;height:114px;">
 </div>
+div {
+    background-color: lightblue;
+}
 <div class = "row">
   <div class="col-md-6">
     <br><br><br><br><br><br>
