--- a/public/list.html
+++ b/public/list.html
@@ -2,9 +2,11 @@
   <img src="odu_logo.gif" alt="Lion Logo" align="left" style="width:152px;height:114px;">
   <img src="netarus_medium_logo.png" alt="HC Logo" align="right" style="width:300px;height:114px;">
 </div>
+<style>
 div {
     background-color: lightblue;
 }
+</style>
 <div class = "row">
   <div class="col-md-6">
     <br><br><br><br><br><br>
