--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       body {
         min-height: 900px;
         padding-top: 70px;
+        background-color: #ccd9ff;
       }
     </style>
 
@@ -45,7 +46,7 @@
 		<div ng-view>
 		</div>
 		</div>
-	
+
 
   </body>
 </html>
