--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       body {
         min-height: 900px;
         padding-top: 70px;
-        background-color: #ccd9ff;
+        background-color: #0077b3;
       }
     </style>
 
