--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
         padding-top: 70px;
         background-color: #ffe6cc;
       }
+      div class="navbar" {
+        background-color: #fff2e6;
+      }
     </style>
 
     <script src="/js/app.js"></script>
