--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,9 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="#/">Home</a></li>
-			<li><a href="#/groups">Groups</a></li>
-			<li><a href="#/progress_front_page">Reporting</a></li>
+			      <li><a href="#/groups">Groups</a></li>
+			      <li><a href="#/progress_front_page">Reporting</a></li>
+            <li><a href="#/general_info">General Info</a></li>
           </ul>
         </div>
       </div>
