--- a/public/general_info.html
+++ b/public/general_info.html
@@ -4,29 +4,9 @@
 <!--<link rel="stylesheet" type="text/css" href="style_gen_info.css">-->
 </head>
 
-<body ng-controller="ChallengeThemes as challenge">
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <div class="navbar-brand" href="#/">ODU Computer Science Summer Research Initiative</div>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li><a href="#/">Home</a></li>
-    <li><a href="#/groups">Groups</a></li>
-    <li><a href="#/progress_front_page">Reporting</a></li>
-    <li><a href="general_info.html">General Info</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <!-- Dynamically render templates -->
-  <div class="container">
-  <div ng-view>
-  </div>
-  </div>
 
 
+<body>
   <h1>General Information and Challenge Details</h1>
   <h2>Deliverables</h2>
   <dl>
