--- a/public/general_info.html
+++ b/public/general_info.html
@@ -3,10 +3,7 @@
 <head>
 <!--<link rel="stylesheet" type="text/css" href="style_gen_info.css">-->
 </head>
-
-
-
-<body>
+<body background="tower-cranes-landscape.jpg">
   <h1>General Information and Challenge Details</h1>
   <h2>Deliverables</h2>
   <dl>
@@ -34,6 +31,4 @@
        <li>Ongoing software licensing costs to support the analytics delivered</li>
     </ul>
   </li>
-
-
 </body>
