--- a/public/general_info.html
+++ b/public/general_info.html
@@ -3,7 +3,12 @@
 <head>
 <!--<link rel="stylesheet" type="text/css" href="style_gen_info.css">-->
 </head>
-<body background="tower-cranes-landscape.jpg">
+<style>
+  body {
+    background-image: url("tower-cranes-landscape.jpg");
+  }
+</style>
+<body>
   <h1>General Information and Challenge Details</h1>
   <h2>Deliverables</h2>
   <dl>
