--- a/public/general_info.html
+++ b/public/general_info.html
@@ -6,6 +6,8 @@
 <style>
   body {
     background-image: url("tower-cranes-landscape.jpg");
+    background: no-repeat;
+    background-position: center;
   }
 </style>
 <body>
