--- a/public/general_info.html
+++ b/public/general_info.html
@@ -7,6 +7,7 @@
   body {
     background-image: url("tower-cranes-landscape.jpg");
     background: no-repeat;
+    background-attachment: fixed;
     background-position: center;
   }
 </style>
