--- a/public/general_info.html
+++ b/public/general_info.html
@@ -6,8 +6,8 @@
 <style>
   body {
     background-image: url("tower-cranes-landscape.jpg");
-  
-    background-attachment: fixed;
+
+    background-attachment: scroll;
     background-position: center;
   }
 </style>
