--- a/public/general_info.html
+++ b/public/general_info.html
@@ -6,7 +6,7 @@
 <style>
   body {
     background-image: url("tower-cranes-landscape.jpg");
-
+    background-repeat: repeat-x;
     background-attachment: scroll;
     background-position: center;
   }
