--- a/public/general_info.html
+++ b/public/general_info.html
@@ -9,6 +9,7 @@
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center;
+    background-color: blue;
   }
 </style>
 <body>
