--- a/public/general_info.html
+++ b/public/general_info.html
@@ -8,7 +8,7 @@
     background-image: url("tower-cranes-landscape.jpg");
     background-repeat: no-repeat;
     background-attachment: scroll;
-    background-position: center;
+    background-position: right bottom;
     background-color: #99ccff;
   }
 </style>
