"added title to list page"

--- a/public/list.html
+++ b/public/list.html
@@ -1,3 +1,7 @@
+<head>
+  <title>ODU Challenge</title>
+</head>
+
 <div>
   <img src="odu_logo.gif" alt="Lion Logo" align="left" style="width:152px;height:114px;">
   <img src="netarus_medium_logo.png" alt="HC Logo" align="right" style="width:300px;height:114px;">
@@ -15,7 +19,7 @@
 	   demonstrate the real world and useful data within a construction environment.</p>
 	<h3>Timeline</h3>
 	<ol>
-	  <li><b>Kick-Off Meeting:</b> July 11, 2016 @ 9 AM</li>
+	  <li><b>Kick-Off Meeting:</b> July 12, 2016 @ 9 AM (Tuesday)</li>
 	  <li><b>Work Period:</b> July 11 through August 5</li>
 	  <li><b>Final Award:</b> August 12, 2016</li>
 	</ol>
